--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.meta.xr.sdk.interaction": "65.0.0",
     "com.meta.xr.sdk.interaction.ovr.samples": "65.0.0",
     "com.unity.collab-proxy": "2.3.1",
+    "com.unity.editorcoroutines": "1.0.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
@@ -13,6 +14,13 @@
     "com.unity.xr.interaction.toolkit": "2.5.4",
     "com.unity.xr.management": "4.4.1",
     "com.unity.xr.oculus": "4.2.0",
+    "io.extendreality.tilia.camerarigs.trackedalias.unity": "2.5.4",
+    "io.extendreality.tilia.camerarigs.unityxr": "2.1.13",
+    "io.extendreality.tilia.camerarigs.xrpluginframework.unity": "2.1.13",
+    "io.extendreality.tilia.input.unityinputsystem": "2.4.10",
+    "io.extendreality.tilia.interactions.controllables.unity": "2.10.28",
+    "io.extendreality.tilia.interactions.interactables.unity": "2.17.2",
+    "io.extendreality.tilia.sdk.oculusintegration.unity": "2.3.9",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -44,5 +52,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "npmjs",
+      "url": "https://registry.npmjs.org/",
+      "scopes": [
+        "io.extendreality"
+      ]
+    }
+  ]
 }
